--- a/bin/config.json
+++ b/bin/config.json
@@ -1,5 +1,5 @@
 {
-  "city": ["Vologda", "Novosibirsk", "Minsk"],
+  "city": ["Vologda", "Novosibirsk", "Minsk", "Magadan"],
   "frequency": 60,
   "days_stored": 3
 }
